# user-service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml  specification.yaml
.github/workflows/: deploy_webserver.yml  test.yml
app/: __init__.py  main.py
app/adapters/: __init__.py  liveness_adapter.py  users_adapter.py
app/authorization/: __init__.py  authorization.py
app/models/: __init__.py  authorization_model.py  user_model.py
app/routers/: __init__.py  authorize.py  login.py  ping.py  ready.py  users.py
app/services/: __init__.py  authorization_service.py  login_service.py  users_service.py
src/user_service/: app.py
src/user_service/adapters/: adapter.py  users_adapter.py
src/user_service/models/: __init__.py
src/user_service/services/: authorization_service.py  login_service.py  users_service.py
src/user_service/views/: authorize.py  liveness.py  login.py  users.py  utils.py
tests/: conftest.py
tests/contract/: test_authorize.py  test_login.py  test_ping.py  test_ready.py  test_users.py
tests/integration/: test_authorize.py  test_liveness.py  test_login.py  test_users.py
tests/unit/: __init__.py  test_login_service.py
user_service/: app.py  gunicorn_config.py
user_service/adapters/: __init__.py  adapter.py  users_adapter.py
user_service/models/: __init__.py  user_model.py
user_service/services/: __init__.py  authorization_service.py  login_service.py  users_service.py
user_service/views/: __init__.py  authorize.py  liveness.py  login.py  users.py  utils.py
